--- a/app/src/main/res/layout/activity_deposit2.xml
+++ b/app/src/main/res/layout/activity_deposit2.xml
@@ -8,6 +8,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.theprogrammingturkey.hackohio2016.DepositActivity2">
+    tools:context="com.theprogrammingturkey.hackohio2016.DepositActivity">
+
+    <Spinner android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:drawSelectorOnTop="true"
+        android:prompt="@string/app_name"
+        android:entries="@array/deposit_arrays"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="0dp" ></Spinner>
+
+
 
 </RelativeLayout>
+
+
+
+
