--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,36 +16,25 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title"
             android:textAlignment="center"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            android:id="@+id/title" />
+            android:textAppearance="@android:style/TextAppearance.Large" />
 
         <TextView
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"
-            android:text="@string/description"
-            android:id="@+id/description" />
+            android:paddingTop="@dimen/text_view_margin_top"
+            android:text="@string/description" />
 
-        <Button
-            android:text="@string/button_account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/button_padding"
-            android:layout_marginTop="@dimen/button_margin_top"
-            android:id="@+id/account" />
-
-        <Button
-            android:text="@string/button_desposit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/button_margin_top"
-            android:id="@+id/deposit"
-            android:padding="@dimen/button_padding" />
+        <FrameLayout
+            android:id="@+id/frame_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </FrameLayout>
 
     </LinearLayout>
-
 </ScrollView>
