--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">32dp</dimen>
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_margin_top">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_view_margin_top">12dp</dimen>
 </resources>
