--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,4 +83,13 @@
         android:layout_below="@+id/spinner2"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/transfer"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="33dp"
+        android:id="@+id/button" />
+
 </RelativeLayout>
