--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.theprogrammingturkey.hackohio2016.Account">
+    tools:context="com.theprogrammingturkey.hackohio2016.AccountActivity">
 
     <TextView
-        android:text="Customer"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/accountInfo1" />
+        android:text="Account"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textAlignment="center" />
 
-    <TextView
-        android:text="account No"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_show_all_accounts"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/accountInfo2"
-        android:layout_marginTop="81dp"
-        android:layout_below="@+id/accountInfo1"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="@dimen/button_margin_top"
+        android:text="Show All Accounts" />
 
-    <TextView
-        android:text="Money"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_get_account_by_id"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/accountInfo3"
-        android:layout_marginTop="95dp"
-        android:layout_below="@+id/accountInfo2"
-        android:layout_alignParentStart="true" />
-</RelativeLayout>
+        android:layout_marginTop="@dimen/button_margin_top"
+        android:text="Get Account By Id" />
+
+    <Button
+        android:id="@+id/button_get_accounts_by_customer_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/button_margin_top"
+        android:text="Get Accounts By Customer Id" />
+
+
+</LinearLayout>
