--- a/app/src/main/res/layout/activity_bank_branches.xml
+++ b/app/src/main/res/layout/activity_bank_branches.xml
@@ -11,13 +11,23 @@
     tools:context="com.theprogrammingturkey.hackohio2016.BankBranches">
 
     <Button
+        android:text="Show Nearby ATMs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_nearby_atms"
+        android:onClick="showNearbyAtms"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp" />
+
+    <Button
         android:text="Show Nearby Branches"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/mapButton"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="browser1"/>
+        android:id="@+id/button_nearby_branches"
+        android:onClick="showNearbyBranches"
+        android:layout_marginTop="39dp"
+        android:layout_below="@+id/button_nearby_atms"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
