--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,44 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.theprogrammingturkey.hackohio2016.AccountActivity">
 
-    <TextView
-        android:id="@+id/textView5"
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Account"
-        android:textAppearance="@android:style/TextAppearance.Large"
-        android:textAlignment="center" />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button_show_all_accounts"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/button_margin_top"
-        android:text="Show All Accounts" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Accounts"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:textAlignment="center" />
 
-    <Button
-        android:id="@+id/button_get_account_by_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/button_margin_top"
-        android:text="Get Account By Id" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/button_margin_top"
+            android:layout_marginTop="@dimen/button_margin_top">
 
-    <Button
-        android:id="@+id/button_get_accounts_by_customer_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/button_margin_top"
-        android:text="Get Accounts By Customer Id" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="30dp">
+
+                <TextView
+                    android:text="Savings Accounts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/savings_text_view"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:layout_height="match_parent"
+                    android:id="@+id/expand_collapse_savings"
+                    android:background="@android:drawable/arrow_up_float"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:onClick="onClick"
+                    android:layout_width="30dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/savings_layout">
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/button_margin_top"
+            android:layout_marginTop="@dimen/button_margin_top">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="30dp">
+
+                <TextView
+                    android:text="Checking Accounts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/checking_text_view"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:layout_height="match_parent"
+                    android:id="@+id/expand_collapse_checking"
+                    android:background="@android:drawable/arrow_up_float"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:onClick="onClick"
+                    android:layout_width="30dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/checking_layout">
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/button_margin_top"
+            android:layout_marginTop="@dimen/button_margin_top">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="30dp">
+
+                <TextView
+                    android:text="Credit Accounts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/credit_text_view"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:layout_height="match_parent"
+                    android:id="@+id/expand_collapse_credit"
+                    android:background="@android:drawable/arrow_up_float"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:onClick="onClick"
+                    android:layout_width="30dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/credit_layout">
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
-</LinearLayout>
+</ScrollView>
