--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,4 +40,11 @@
         android:layout_marginTop="@dimen/button_margin_top"
         android:text="Search for ATMs and Branches" />
 
+    <Button
+        android:id="@+id/button_mapInApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Search for ATMs" />
+
 </LinearLayout>
